# aws-robomaker-sample-application-voiceinteraction

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  github_deploy.pem.enc  roboMakerSettings.json
log_based_simulation_ws/: .rosinstall
log_based_simulation_ws/src/: README.md
log_based_simulation_ws/src/person_detection_log_based_simulation/: CMakeLists.txt  package.xml
log_based_simulation_ws/src/person_detection_log_based_simulation/launch/: play_paused.launch  play_unpaused.launch  regression_test.launch  rosbag_play.launch
log_based_simulation_ws/src/person_detection_log_based_simulation/script/: regression_test.py
robot_ws/: .rosinstall
robot_ws/src/voice_interaction_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_ws/src/voice_interaction_robot/config/: VoiceInteractionRobot.json  lex_config.yaml
robot_ws/src/voice_interaction_robot/launch/: deploy_voice_interaction.launch  deploy_voice_interaction.launch.py  integration_test.launch  integration_test.launch.py  voice_interaction.launch  voice_interaction.launch.py
robot_ws/src/voice_interaction_robot/nodes/: audio_output  voice_command_translator  voice_input  voice_interaction  voice_output
robot_ws/src/voice_interaction_robot/scripts/: audio_input.py  text_input.py
robot_ws/src/voice_interaction_robot/src/voice_interaction_robot/: audio_output.py  voice_command_translator.py  voice_input.py  voice_interaction.py  voice_output.py
robot_ws/src/voice_interaction_robot/src/voice_interaction_robot/test/: integration_test.py
robot_ws/src/voice_interaction_robot/test/: integration_test  integration_test.py
robot_ws/src/voice_interaction_robot_msgs/: CMakeLists.txt  package.xml
robot_ws/src/voice_interaction_robot_msgs/msg/: FulfilledVoiceCommand.msg
simulation_ws/: .rosinstall
simulation_ws/src/voice_interaction_simulation/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/voice_interaction_simulation/launch/: bookstore.launch  bookstore.launch.py  empty_world.launch  empty_world.launch.py  spawn_balls.launch  spawn_balls.launch.erb  spawn_balls.launch.py  view_empty_world.launch  view_empty_world.launch.py
simulation_ws/src/voice_interaction_simulation/worlds/: empty.world
