<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>voice_interaction_robot</name>
  <version>2.0.0</version>
  <description>
    AWS RoboMaker robot package that shows how to use a Turtlebot3 with Amazon Lex and Amazon Polly
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>lex_common_msgs</depend>
  <depend>voice_interaction_robot_msgs</depend>
  <depend>aws_common</depend>
  <depend>aws_ros2_common</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>python-pyaudio</depend>
  <depend>python3-rospkg</depend>
  <depend>tts</depend>
  <depend>lex_node</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
