<?xml version="1.0"?>
<package format="2">
    <name>voice_interaction_robot_msgs</name>
    <version>1.0.0</version>
    <description>Common messages for lex interaction</description>
    <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>std_msgs</depend>
    <depend>diagnostic_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
</package>
