<?xml version="1.0"?>
<package format="2">
  <name>voice_interaction_simulation</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker simulation package for a TurtleBot3 in a retail bookstore world.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_navigation</depend>
  <exec_depend>gazebo</exec_depend>
</package>
